--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "quote-scraper"
 version = "0.1.0"
 authors = ["hr567 <hr567@hr567.me>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-lazy_static = "1.4.0"
-reqwest = "0.11.11"
-scraper = "0.13.0"
-tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "sync"] }
-url = "2.2.2"
+once_cell = "1.18.0"
+reqwest = "0.11.22"
+scraper = "0.18.1"
+tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync"] }
+url = "2.4.1"
